# Android-as_video_player

app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/common/egl_core/: egl_core.cpp
app/src/main/cpp/common/opengl_media/render/: video_gl_surface_render.cpp
app/src/main/cpp/common/opengl_media/texture/: yuv_texture_frame.cpp
app/src/main/cpp/common/opengl_media/texture_copier/: yuv_texture_frame_copier.cpp
app/src/main/cpp/common/opensl_media/: opensl_es_context.cpp
app/src/main/cpp/video_player/: audio_output.cpp  projector_video_out.cpp  projector_video_out.h  video_output.cpp  video_output.h  video_player_controller.cpp  video_player_controller.h  video_projector_player_controller.cpp  video_projector_player_controller.h
app/src/main/cpp/video_player/common/: circle_texture_queue.cpp  circle_texture_queue.h
app/src/main/cpp/video_player/decoder/: ffmpeg_video_decoder.cpp  video_decoder.cpp
app/src/main/cpp/video_player/sync/: av_synchronizer.cpp  av_synchronizer.h
app/src/main/cpp/video_player/texture_uploader/: texture_frame_uploader.cpp
app/src/main/java/com/changba/songstudio/video/player/: ChangbaPlayer.java  ProjectorPlayer.java
app/src/main/java/media/ushow/as_video_player/: ChangbaPlayerActivity.java  MainActivity.java
app/src/main/jni/: ChangbaPlayer.cpp  ProjectorPlayer.cpp  com_changba_songstudio_video_player_ChangbaPlayer.h  com_changba_songstudio_video_player_ProjectorPlayer.h
app/src/main/res/layout/: activity_surfaceview_player.xml
gradle/wrapper/: gradle-wrapper.properties
